Fix bug in hackernews.styl
Having a single extra space indenting a child selector (5 spaces instead
of 4) caused the following, correctly indented sibling selector to be an
unparented selector, turning "#hnmain a" into "a", causing it to apply
to all A elements in the page.  And there were no errors from styl.
Wow.

--- a/css/solarized-all-sites-dark.css
+++ b/css/solarized-all-sites-dark.css
@@ -656,7 +656,7 @@ div.crp {
 #hnmain > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) {
   background-color: #cb4b16 !important;
 }
-a {
+#hnmain a {
   color: #93a1a1 !important;
 }
 .title a {
